Add cheesy code to get giveaway code from 'hash param'

--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>Giveaway AJAX Test - jsFiddle demo by mathomas</title>
+  <title>Mike Thomas' YouTube Channel Giveaway</title>
   
   
   <script type='text/javascript' src='http://code.jquery.com/jquery-2.1.3.js'></script>
-  <script type="text/javascript" src="lib/axios/dist/axios.standalone.js"></script>
-  <script type="text/javascript" src="lib/CryptoJS/rollups/hmac-sha256.js"></script>
-  <script type="text/javascript" src="lib/CryptoJS/rollups/sha256.js"></script>
-  <script type="text/javascript" src="lib/CryptoJS/components/hmac.js"></script>
-  <script type="text/javascript" src="lib/CryptoJS/components/enc-base64.js"></script>
-  <script type="text/javascript" src="lib/moment/moment.js"></script>
-  <script type="text/javascript" src="lib/url-template/url-template.js"></script>
-  <script type="text/javascript" src="lib/apiGatewayCore/sigV4Client.js"></script>
-  <script type="text/javascript" src="lib/apiGatewayCore/apiGatewayClient.js"></script>
-  <script type="text/javascript" src="lib/apiGatewayCore/simpleHttpClient.js"></script>
-  <script type="text/javascript" src="lib/apiGatewayCore/utils.js"></script>
-  <script type="text/javascript" src="apigClient.js"></script>
+  <script type="text/javascript" src="./lib/axios/dist/axios.standalone.js"></script>
+  <script type="text/javascript" src="./lib/CryptoJS/rollups/hmac-sha256.js"></script>
+  <script type="text/javascript" src="./lib/CryptoJS/rollups/sha256.js"></script>
+  <script type="text/javascript" src="./lib/CryptoJS/components/hmac.js"></script>
+  <script type="text/javascript" src="./lib/CryptoJS/components/enc-base64.js"></script>
+  <script type="text/javascript" src="./lib/moment/moment.js"></script>
+  <script type="text/javascript" src="./lib/url-template/url-template.js"></script>
+  <script type="text/javascript" src="./lib/apiGatewayCore/sigV4Client.js"></script>
+  <script type="text/javascript" src="./lib/apiGatewayCore/apiGatewayClient.js"></script>
+  <script type="text/javascript" src="./lib/apiGatewayCore/simpleHttpClient.js"></script>
+  <script type="text/javascript" src="./lib/apiGatewayCore/utils.js"></script>
+  <script type="text/javascript" src="./apigClient.js"></script>
   
   <style type='text/css'>
     label { font-family: Georgia, sans-serif; }
@@ -26,12 +26,18 @@
   
 
 <script type='text/javascript'>
+
+var getGiveawayCode = function() {
+    var currentUrl = window.location.toString();
+    return currentUrl.split("#")[1];
+}
+
 $(window).load(function(){
     var questDisplay = $('#result');
     $('#submit').click(function () {
         questDisplay.fadeOut("slow", function() {
             var questKey = $('#questKey').val();
-            var params = { giveawaycode: "test", questKey: questKey };
+            var params = { giveawaycode: getGiveawayCode(), questKey: questKey };
             var apigClient = apigClientFactory.newClient();
 
             apigClient.giveawayQuestGiveawaycodeQuestKeyGet(params, {}, {})
