--- a/index.html
+++ b/index.html
@@ -19,10 +19,28 @@
   <script type="text/javascript" src="./lib/apiGatewayCore/utils.js"></script>
   <script type="text/javascript" src="./apigClient.js"></script>
   
-  <style type='text/css'>
-    label { font-family: Georgia, sans-serif; }
-    #result { background-color: yellow; display: none; }
-  </style>
+	<style type="text/css">
+		body, input { margin: auto; font-family: Georgia, serif; font-size: 30px; text-align: center; background: lightblue; }
+		input { text-align: center;}
+		form { background: lightblue; border: 6px solid darkblue; margin-top: 1.5em; padding: 10px; border-radius: 16px; -moz-border-radius: 16px; }
+		label { display: block; margin-bottom: .5em; }
+		h1 { text-align: center; }
+		h2, h3 { color: lightblue; text-align: center; margin-top: 1.5em; }
+		ol > li { font-size: 1.25em; }
+		li { margin-top: 1em; }
+
+		div#main { width: 800px; margin: 0 auto; padding: 10px 125px 25px 125px; 
+			       background: white; border-left: 2px solid #444; border-right: 2px solid #444; }
+		div#result { margin-top: 1.5em; font-size: .80em; margin-bottom: 1em; color: white; text-shadow: darkblue 0.05em 0.05em 0.1em; }
+		
+		div#instructions { text-align: left; margin-top: 4em; font-size: .60em; color: #888; }
+		em { color: #666; }
+		.key { font-family: Arial, sans-serif; color: #666 }
+		
+		div#exampleEmail { text-align: left; margin-top: 4em; font-size: .40em; color: black; 
+						   border: 1px solid gray; border-right: 1px solid black; border-bottom: 1px solid black; }
+	</style>
+
   
 
 <script type='text/javascript'>
@@ -58,14 +76,94 @@ $(window).load(function(){
 </script>
 
 </head>
-<body>
-  <label>Quest Key:</label>
-<input id="questKey" type="text" length="12" value="example"></input>
-<br/>
-<button id="submit">Get Quest</button>
-<p id="result"></p>
-</body>
+	<body>
+		<div id="main">
+			<h1 style="margin-bottom: 0;">Giveaway</h1>
+			<h3 style="margin-top: 0;">by Mike Thomas</h3>
+			
+			<form id="questForm" action="#">
+				<label>Quest Key:</label>
+				<input id="questKey" type="text" required="true" style="width: 8em; margin-bottom: .75em;"><br>
+				<button id="submit" type="button">Get Quest</button>
+				<div id="result">
+					...?...
+				</div>
+			</form>
+			<div id="instructions">
+				<h2>Cautions, Rules, and Legal Stuff</h2>
+				<p>If you're taking part in the contest you agree to the following:
+					<ul>
+						<li>Please realize I'm going to send the kit as cheaply as possible :-)</em>
+						<li><em>One entry per person.</em>  Duplicate entries will be ignored.
+						<li>You alone are responsible for your country's customs or taxes, if applicable.</em>
+						<li>No complaining!
+					</ul>
+
+				<h2>Instructions</h2>
+				<p>Welcome to the Pentax ME Giveaway!  In order to be entered into the drawing for the camera kit, you need
+				to carefully follow the <em style="text-decoration: underline;">5 easy steps</em> below.</p>
+				<p>When the time limit is up, I'll put all the valid entries into a drawing to determine the winner.  I will
+					contact the winner by email to get the mailing address.</p>
+				<p>If the instructions aren't followed you will not be entered in the drawing!</p>
+				
+				<p>
+					<ol>
+						<li><em>Subscribe</em> to <a href="http://www.youtube.com/user/mathomas1962">my YouTube channel</a>.  
+							<em>Only subscribers can win</em>.
+						<li><p>Find the <span style="font-size: 125%; font-weight: bold;"><em>5</em></span> <em>"quest keys"</em> in my photography videos.</p>
+							<p>A quest key will look something like this:  <span class="key">quest key: snarfle</span>,
+								and will pop up in the video for a few seconds.</p>
+							<p>The quest keys will appear within the first couple of minutes of a number of my videos, so you'll have to do some hunting.</p>
+						</li>
+						<li><p>Come back here and enter the quest keys (one at a time) into the form above, and click the "Get Quest" button to have each quest revealed.</p>
+							<p>I suggest you try typing <span class="key">snarfle</span> in the form <em>now</em>, just for fun!</p>
+						</li>
+						<li><p>Perform the quests (<em>all 5 of them</em>), and take notes!  You'll have to do some detective work, but everything you 
+							need to know in order to perform the quests is in my YouTube videos, or their descriptions, etc.</p>
+							<p><em>You have to perform all the quests, and get the answers/findings correct to win.</em></p>
+						</li>
+						<li>Once your quests are complete, send an email to 
+							<a href="mailto:pentaxme@me.com?subject=Entry for Pentax ME Drawing">pentaxme@me.com</a> with the following:
+							<ul>
+								<li>Your youtube username (so I can check that you are subscribed)
+								<li>Your quest findings.  All the quests must be completed.  Give the quest key and your findings.
+						    </ul>
+							<p>You might want to check out the example email below.  Really closely.</p>
+						</li>
+				 	</ol>
+				</p>
+				<h2>Example Email (there's no excuse to get this wrong)</h2>
+		    </div>
+			<div id="exampleEmail">
+				<pre>
+From:  luckywinner@email.com
+To:    pentaxme@me.com
+Subject:  Entry for Pentax ME Drawing
+-------------------------------------------------------------
+Hi Mike,
+
+Here's my perfectly complete email.  Cool how I followed directions, eh?
+
+YouTube username:  youtubewinner
+
+My quest findings:
+
+snarfle:  I found three pictures of dolphins
+bloog:    The monkeys names are "flip" and "flop"
+spliff:   Max aperture of f/2.8
+foobar:   I loved the 5th one
+quux:     Row, row, row your boat 
+
+				</pre>
+			</div>
+			 *** of course, your username, quest keys, and findings will be different!
+		</div>
+
+
+
 
 </html>
+
+
 
 
