A bit more templatization.

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                 <h2>Cautions, Rules, and Legal Stuff</h2>
                 <p>If you're taking part in the contest you agree to the following:
                 <ul>
-                    <li>Please realize I'm going to send the kit as cheaply as possible :-)</em>
+                    <li>Please realize I'm going to send the {{item}} as cheaply as possible :-)</em>
                     <li><em>One entry per person.</em>  Duplicate entries will be ignored.
                     <li>You alone are responsible for your country's customs or taxes, if applicable.</em>
                     <li>No complaining!
                 </ul>
                 <h2>Instructions</h2>
-                <p>Welcome to the {{item}} giveaway!  In order to be entered into the drawing for the camera kit, you need
+                <p>Welcome to the {{item}} giveaway!  In order to be entered into the drawing for this item, you need
                     to carefully follow the <em style="text-decoration: underline;">5 easy steps</em> below.
                 </p>
                 <p>When the time limit is up, I'll put all the valid entries into a drawing to determine the winner.  I will
