Have main content fade in.  Handle 'quest key not found' scenario.

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </script>
     </head>
 
-    <body>
+    <body id="body">
         <div id="main">
             <div id="intro-placeholder"></div>
             <div id="giveaway-form-placeholder"></div>
