Start implementing load spinner.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         <script type="text/javascript" src="./lib/apiGatewayCore/apiGatewayClient.js"></script>
         <script type="text/javascript" src="./lib/apiGatewayCore/simpleHttpClient.js"></script>
         <script type="text/javascript" src="./lib/apiGatewayCore/utils.js"></script>
+        <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.3/handlebars.js"></script>
+
         <script type="text/javascript" src="./apigClient.js"></script>
         <script type="text/javascript" src="./giveaway.js"></script>
-        <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.3/handlebars.js"></script>
+        <script type="text/javascript" src="./spin.min.js"></script>
 
         <script id="intro" type="text/x-handlebars-template">
             <div id="intro">
