Satisfactory expiration date display in place.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="intro">
                 <h1 style="margin-bottom: 0;">{{item}}<br/>Giveaway</h1>
                 <h3 style="margin-top: 0;">by Mike Thomas</h3>
-                <h3 style="margin-top: 0;">Expires {{expiration}}</h3>
+                <h4 style="margin-top: 0;">Expires {{expirationFormatted}}<br/>({{expirationFromNow}})</h4>
             </div>
         </script>
         
