Make quest key 'locations/search' text data-driven.  Some mile reformatting here and there.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
     <script id="intro" type="text/x-handlebars-template">
         <div id="intro">
-            <h1 style="margin-bottom: 0;"><em>{{item}}</em><br/>Giveaway</h1>
-            <h3 style="margin-top: 0;">by Mike Thomas</h3>
-            <h4 style="margin-top: 0;">Expires {{expirationFormatted}}<br/>({{expirationFromNow}})</h4>
+            <h1 style="margin-bottom: 0;">{{item}} Giveaway</h1>
+            <h3 style="margin-top: 0;">brought to you by <a href="http://www.youtube.com/user/mathomas1962">Mike Thomas</a></h3>
+            <h5 style="margin-top: 0;">Expires {{expirationFormatted}}<br/>({{expirationFromNow}})</h5>
         </div>
     </script>
 
@@ -91,23 +91,24 @@
                 <li>No complaining!
             </ul>
             <h2>Instructions</h2>
-            <p>Welcome to the <em>{{item}}</em> giveaway! In order to be entered into the drawing for this item, you need to carefully follow the <em style="text-decoration: underline;">5 easy steps</em> below.
+            <p>Welcome to the <em>{{item}}</em> giveaway contest!  The contest is basically an multi-step internet scavenger hunt.</p>
+            <p>In order to be entered into the drawing for this item you must carefully follow the <em style="text-decoration: underline;">5 easy steps</em> below.
             </p>
             <p>When the time limit is up, I'll put all the valid entries into a drawing to determine the winner. I will contact the winner by email to get the mailing address.
             </p>
-            <p>If the instructions aren't followed you will not be entered in the drawing!</p>
+            <p><b>If these instructions aren't followed you will not be entered in the drawing!</b></p>
             <ol>
                 <li><em>Subscribe</em> to <a href="http://www.youtube.com/user/mathomas1962">my YouTube channel</a>.
                     <em>Only subscribers can win</em>.
                 </li>
                 <li>
-                    <p>Find the <span style="font-size: 125%; font-weight: bold;"><em>{{questCount}}</em></span> <em>"quest keys"</em> in my photography videos.</p>
-                    <p>A quest key will look something like this: <span class="key">quest key: snarfle</span>, and will pop up in the video for a few seconds.
+                    <p>Find the <span style="font-size: 125%; font-weight: bold;"><em>{{questCount}}</em></span> <em>"quest keys"</em> I've hidden here and there in the internets.</p>
+                    <p>{{questKeyLocations}}</p>
+                    <p>A quest key will look something like this: <span class="key">quest key: snarfle</span>.  I suggest you try typing "snarfle" into the <em>quest key</em> form above to see how it works.
                     </p>
-                    <p>The quest keys will appear within the first couple of minutes of a number of my videos, so you'll have to do some hunting.</p>
-                </li>
+                    </li>
                 <li>
-                    <p>Come back here and enter the quest keys (one at a time) into the form above, and click the "Get Quest" button to have each quest revealed.</p>
+                    <p>Come back here and enter the <em>quest keys</em> (one at a time) into the form above, and click the "Get Quest" button to have each quest revealed.</p>
                     <p>I suggest you try typing <span class="key">snarfle</span> in the form <em>now</em>, just for fun!</p>
                 </li>
                 <li>
