Adjustments based on comments from Jason.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <li>No complaining!
             </ul>
             <h2>Instructions</h2>
-            <p>Welcome to the <em>{{item}}</em> giveaway contest!  The contest is basically an multi-step internet scavenger hunt.</p>
+            <p>Welcome to the <em>{{item}}</em> giveaway contest!  The contest is basically a multi-step internet scavenger hunt.</p>
             <p>In order to be entered into the drawing for this item you must carefully follow the <em style="text-decoration: underline;">5 easy steps</em> below.
             </p>
             <p>When the time limit is up, I'll put all the valid entries into a drawing to determine the winner. I will contact the winner by email to get the mailing address.
