Use consistent naming for quest keynames.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 Here's my perfectly complete email.  Cool how I followed directions, eh?
 
-                YouTube username:  youtubewinner
+                YouTube username:  &lt;your user name here&gt;
 
                 My quest findings:
 
@@ -60,13 +60,13 @@
                 quux:     Row, row, row your boat 
             </pre>
         </div>
-        *** of course, your username, quest keys, and findings will be different!
+        *** of course, your username, quest keywords, and findings will be different!
     </script>
 
     <script id="giveaway-form" type="text/x-handlebars-template">
         <div id="form">
             <form id="questForm" action="#">
-                <label>Quest Key:</label>
+                <label>Quest Keyword:</label>
                 <input id="questKey" type="text" required="true" style="width: 8em; margin-bottom: .75em;">
                 <br>
                 <button id="submit" class="btn" type="button">Get Quest</button>
@@ -100,9 +100,9 @@
             <p>Welcome to the <em>{{item}}</em> giveaway contest!  The contest is basically a multi-step internet scavenger hunt.</p>
             <p>In order to be entered into the drawing for this item you must carefully follow the <em style="text-decoration: underline;">5 easy steps</em> below.
             </p>
-            <p>When the time limit is up, I'll put all the valid entries into a drawing to determine the winner. I will contact the winner by email to get the mailing address.
+            <p>When the time limit is up, I'll put all the valid entries into a drawing to determine the winner.  I will contact the winner by email to get the mailing address.
             </p>
-            <p><b>If these instructions aren't followed you will not be entered in the drawing!</b></p>
+            <p style="font-size: larger;"><b>If these instructions aren't followed you will not be entered in the drawing!</b></p>
             <ol>
                 <li><em>Subscribe</em> to <a href="http://www.youtube.com/user/mathomas1962">my YouTube channel</a>.
                     <em>Only subscribers can win</em>.
@@ -111,12 +111,12 @@
                     <p>Find the <span style="font-size: 125%; font-weight: bold;"><em>{{questCount}}</em></span> <em>"quest keys"</em> I've hidden here and there in the internets:</p>
                     <p>A quest key is the giveaway code ({{code}}) combined with a keyword.  The keyword is <em>italicized</em> below.
                     <p>For example: <span class="key">{{code}}:<i>snarfle</i></span></p>
-                    <p>You only type the <i>keyword</i> into the form above.  I suggest you try typing "snarfle" into the <em>quest key</em> form to see how it works.</p>
+                    <p>You only type the <i>keyword</i> into the form above.  I suggest you try typing "snarfle" into the <em>quest keyword</em> form to see how it works.</p>
                     
                     <p><em><b>Where to look:</b></em>&nbsp;&nbsp;&nbsp;{{questKeyLocations}}</p>
                     </li>
                 <li>
-                    <p>Come back here and enter the <em>quest keys</em> (one at a time) into the form above, and click the "Get Quest" button to have each quest revealed.</p>
+                    <p>Come back here and enter the <em>quest keywords</em> (one at a time) into the form above, and click the "Get Quest" button to have each quest revealed.</p>
                     <p>I suggest you try typing <span class="key">snarfle</span> in the form <em>now</em>, just for fun!</p>
                 </li>
                 <li>
@@ -130,7 +130,7 @@
                     <a href="mailto:{{entryEmail}}?subject=Entry for '{{item}}' Giveaway">{{entryEmail}}</a> with the following:
                     <ul>
                         <li>Your youtube username (so I can check that you are subscribed)</li>
-                        <li>Your quest findings. All the quests must be completed. Give the quest key and your findings.</li>
+                        <li>Your quest findings. All the quests must be completed. Give the quest keyword and your findings.</li>
                     </ul>
                     <p>You might want to check out the example email below. Really closely.</p>
                 </li>
