Change content to suspension text.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@
         <div id="intro">
             <h1 style="margin-bottom: 0;">{{item}} Giveaway ({{code}})</h1>
             <h3 style="margin-top: 0;">brought to you by <a href="http://www.youtube.com/user/mathomas1962">Mike Thomas</a></h3>
+            <p>Sorry about this, but I'm temporarily suspending the Horizon Backpack Giveaway, so <i>stop looking for Quest Keys, for now</i>.</p>
+            <p>I got some feedback that I need to take seriously.</p>
+            <p><i>Don't worry -- you haven't wasted any time!</i>  Any Quest Keys you've found are still valid.  Keep your notes up to this point.</p>
+            <p>Please write me at <a href="mailto:mike_thomas@yahoo.com?subject=Horizon Backpack Giveaway - WTF?">mike_thomas@yahoo.com</a> if you want to 
+            talk about it.</p>
+            <p>Here is <a href="https://youtu.be/jZobluEbLx8" target="_new">my video explaining a bit more</a>.
+            <p>Thanks for your patience, and for watching my videos!</p>
             </div>
-    </script>
+        </script>
 
     <script id="example-email" type="text/x-handlebars-template">
         <div id="exampleEmail">
@@ -142,10 +149,7 @@
 <body id="body">
     <div id="main">
         <div id="intro-placeholder"></div>
-        <div id="giveaway-form-placeholder"></div>
-        <div id="instructions-placeholder"></div>
-        <div id="example-email-placeholder"></div>
-    </div>
+        </div>
 </body>
 
 </html>
