Various text and style changes related to making the quest key hunt a little more reasonable.

--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
                     <p>For example: <span class="key">{{code}}:<i>snarfle</i></span></p>
                     <p>You only type the <i>keyword</i> into the form above.  I suggest you try typing "snarfle" into the <em>quest keyword</em> form to see how it works.</p>
                     
-                    <p><em><b>Where to look:</b></em>&nbsp;&nbsp;&nbsp;{{questKeyLocations}}</p>
-                    </li>
+                    <h4>Where to look</h4>
+                    {{{questKeyLocations}}}
+                </li>
                 <li>
                     <p>Come back here and enter the <em>quest keywords</em> (one at a time) into the form above, and click the "Get Quest" button to have each quest revealed.</p>
                     <p>I suggest you try typing <span class="key">snarfle</span> in the form <em>now</em>, just for fun!</p>
