Small style change.  Add minQuests to JSON.

--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
                     <em>Only subscribers can win</em>.
                 </li>
                 <li>
-                    <p>Find the <span style="font-size: 125%; font-weight: bold;"><em>{{questCount}}</em></span> <em>"quest keys"</em> I've hidden here and there in the internets:</p>
+                    <p>Find the <span class="questCount">{{questCount}}</span> <em>"quest keys"</em> I've hidden here and there in the internets:</p>
                     <p>A quest key is the giveaway code ({{code}}) combined with a keyword.  The keyword is <em>italicized</em> below.
                     <p>For example: <span class="key">{{code}}:<i>snarfle</i></span></p>
                     <p>You only type the <i>keyword</i> into the form above.  I suggest you try typing "snarfle" into the <em>quest keyword</em> form to see how it works.</p>
                     
-                    <p><em><b>Where to look:</b></em>&nbsp;&nbsp;&nbsp;{{questKeyLocations}}</p>
+                    <p><em><b>Where to look:</b></em>&nbsp;&nbsp;&nbsp;{{{questKeyLocations}}}</p>
                     </li>
                 <li>
                     <p>Come back here and enter the <em>quest keywords</em> (one at a time) into the form above, and click the "Get Quest" button to have each quest revealed.</p>
