Add expiration functionality.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
             <h3 style="margin-top: 0;">brought to you by <a href="http://www.youtube.com/user/mathomas1962">Mike Thomas</a></h3>
             </div>
     </script>
-
+    
+    <script id="expired" type="text/x-handlebars-template">
+        <div id="intro">
+            <h1 style="margin-bottom: 0;">{{item}} Giveaway ({{code}}) has Expired</h1>
+            <p>Sorry, but you missed out on this giveaway.  It expired as of {{expirationFormatted}}.</p>
+            </div>
+    </script>
+    
     <script id="example-email" type="text/x-handlebars-template">
         <div id="exampleEmail">
             <h2>Example Email (there's no excuse to get this wrong)</h2>
